--- a/editor/ui/locales/en-US/chrome/dialogs/EdDialogOverlay.dtd
+++ b/editor/ui/locales/en-US/chrome/dialogs/EdDialogOverlay.dtd
@@ -14,5 +14,5 @@
 <!ENTITY makeUrlRelative.tooltip "Change between relative and absolute URL. You must first save the page to change this.">
 
 <!-- Shared by Link and Image dialogs -->
-<!ENTITY LinkURLEditField.label "Enter a web page location, a local file, or select a Named Anchor or Heading from the popup list:">
-<!ENTITY LinkURLEditField.accessKey "w">
+<!ENTITY LinkURLEditField2.label "Enter a web page location, a local file, or select a Named Anchor or Heading from the field's context menu:">
+<!ENTITY LinkURLEditField2.accessKey "w">
