Bug 1396563: Port bug 1386616 to C-C [Move devtools key-shortcuts.properties out of the devtools addon]. rs=bustage-fix
MozReview-Commit-ID: K1neTfcTLPf

--- a/mail/locales/l10n.toml
+++ b/mail/locales/l10n.toml
@@ -95,6 +95,9 @@ locales = [
 [[includes]]
     path = "{mozilla}/toolkit/locales/l10n.toml"
 
+[[paths]]
+    reference = "{mozilla}/devtools/shim/locales/en-US/**"
+    l10n = "{l}{mozilla}/devtools/shim/**"
 
 # ignore MOZ_LANGPACK_CONTRIBUTORS
 [[filters]]
