Bug 1396563: Correct the l10n path for devtools/shim; r=tomprince
MozReview-Commit-ID: 1DaNuOhQdEb

--- a/mail/locales/l10n.toml
+++ b/mail/locales/l10n.toml
@@ -97,7 +97,7 @@ locales = [
 
 [[paths]]
     reference = "{mozilla}/devtools/shim/locales/en-US/**"
-    l10n = "{l}{mozilla}/devtools/shim/**"
+    l10n = "{l}/devtools/shim/**"
 
 # ignore MOZ_LANGPACK_CONTRIBUTORS
 [[filters]]
